--- a/login.html
+++ b/login.html
@@ -3,36 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://fonts.cdnfonts.com/css/wise" rel="stylesheet">
     <link rel="favicon icon" href="./assets/img/wiseFavion.ico">
-    <title>Formulário de Login</title>
-    <link rel="stylesheet" href="./assets/css/login.css"> 
+    <title>Login</title>
+    <!--<link rel="stylesheet" href="./assets/css/login.css"> -->
+    <link rel="stylesheet" href=".\assets\css\login.css"> 
+   
 </head>
 <body>
 
-    
-
-    <form action="/processar-formulario" method="post">
-        <h1>Entrar</h1>
+    <div class="page">
+    <form method="POST" class="loginForm" id="formLogin">
+        <h1>Login</h1>
+        <p>Digite os seus dados de acesso no campo abaixo.</p>
         <!-- Campo de E-mail -->
-        <div>
         <label for="email">Seu e-mail:</label>
-        <input type="email" id="email" name="email" required>
-        </div>
-
+        <input type="email" id="email" name="email" placeholder="Digite seu e-mail" autofocus="true" required>
         <!-- Campo de Senha -->
-        <div>
         <label for="senha">Senha:</label>
-        <input type="password" id="senha" name="senha" required>
-        </div>
-
+        <input type="password" id="senha" name="senha" placeholder="Digite sua senha" required>
         <!-- Botão de Envio -->
-        <button type="submit"><b>Entrar</b></button>
-
-        <div>
-            <a href="cadastro.html"> Criar Conta</a>
-        </div>
+        <input type="submit" value="Acessar" class="btn"></input>
+        <a href="cadastro.html"> Criar Conta</a>
     </form>
+</div>
 
+    <script src=".\assets\js\login.js"></script>
+    
 </body>
 </html>
