--- a/cadastro.html
+++ b/cadastro.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.cdnfonts.com/css/wise" rel="stylesheet">
-    <link rel="favicon icon" href="./assets/img/wiseFavion.ico">
+    <!--<link rel="favicon icon" href="./assets/img/wiseFavion.ico">-->
     <!--<link rel="stylesheet" href="./assets/css/cadastro.css"> -->
-    <link rel="stylesheet" href=".\assets\css\cadastro.css"> 
+    <link rel="stylesheet" href="cadastro.css"> 
     <title>Cadastre-se</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
             <label for="senha">Senha:</label>
             <input type="password" id="senha" name="senha" required>
         <!-- Botão de Envio -->
-        <input type="submit" value="Cadastrar" class="btn">
+        <input type="submit" value="Cadastrar" class="btn" >
         <div id = "mensagem">
             <a href="login.html">Já tem conta? Faça login</a>
         </div>
@@ -36,8 +36,6 @@
     </form>
 </div>
 
-   
-    
-    <script src=".\assets\js\cadastro.js"></script>
+    <script src="cadastro1.js"></script>
 </body>
 </html>
