subindo a versão mais atual do código

--- a/conversoes.html
+++ b/conversoes.html
@@ -1,45 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="favicon Icon" href="../assets/wiseFavicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta2/css/bootstrap-select.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta2/js/bootstrap-select.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-pt_PT.min.js"></script>
+    <link rel="stylesheet" href="./assets/css/conversoes.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <script src="./assets/js/conversoes.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Conversor de Moedas</title>
-    <link rel="stylesheet" href="./conversoes.css">  
-    <script src="conversoes.js"></script>
-    <!--<script src="main.js"></script>-->
+
+
 </head>
+
 <body>
+    <header id="header">
+        <div class="interface">
 
-<div id="converter">
-    <h2>Conversor de Moedas</h2>
-    
-    <label for="valor">Digite o valor em reais:</label>
-    <input type="number" id="valor" placeholder="Digite o valor" min="0" step="0.01">
+            <div class="logo">
+                <a href="../index.html"><img src="#" alt="logo CoderWise"></a>
 
-    <label for="moeda">Escolha a moeda:</label>
-    <select id="moeda">
+            </div> <!------- Logo ----->
 
-        <!--COLOCAR OS NOMES DAS MOEDAS-->
-        <option value="AED-BRL">Valor de compra Dirham dos Emirados</option>
-        <option value="USD-BRL">Valor de compra do Dolar</option>
-        <option value="AUD-BRL">Valor de compra do Dolar</option>
-        <option value="EUR-BRL">Valor de compra do Euro</option>
-        <option value="GBP-BRL">Valor de compra Libra Esterlina</option>
-        <option value="JPY-BRL">Valor de compra Yene Japonês</option>
-        <option value="ZAR-BRL">Valor de compra Rand Sul-Africano</option>
-        <option value="INR-BRL">Valor de compra Rupia Indiana</option>
-    
-    </select>
+            <nav class="menu--desktop">
+                <ul>
+                    <li class="nav--itens">
+                        <a class="nav--link" href="../index.html">
+                            <i class="fa-solid fa-house"></i>
+                            Home
+                        </a>
+                    </li>
+                    <li class="nav--itens">
+                        <a class="nav--link nav--active" href="./conversoes.html">
+                            <i class="bi bi-coin"></i>
+                            Conversão
+                        </a>
+                    </li>
+                    <li class="nav--itens">
+                        <a class="nav--link" href="./extrato.html">
+                            <i class="bi bi-tv-fill"></i>
+                            Extrato
+                        </a>
+                    </li>
+                    <li class="nav--itens">
+                        <a class="nav--link" href="./transferencia.html">
+                            <i class="bi bi-chat-square-text-fill"></i>
+                            Transferência
+                        </a>
+                    </li>
 
-    <p id="cotacao"></p>
+                </ul>
+            </nav> <!-------- Links de navegação entre as páginas ------->
+            <div class="btn--open" id="btn--open">
+                <i class="bi bi-list"></i>
+            </div>
+            <div class="menu--mobile" id="menu--mobile">
+                <div class="btn--close">
+                    <i class="bi bi-x-lg"></i>
+                </div>
 
-    <p id="resultado"></p>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="./index.html">
+                                <div>Home <i class="fa-solid fa-house"></i></div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./conversoes.html">
+                                <div>Conversão <i class="bi bi-camera-reels-fill"></i></div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./extrato.html">
+                                <div>Extrato <i class="bi bi-tv-fill"></i></div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./transferencia.html">
+                                <div> Transferencia <i class="fa-solid fa-money-bill-transfer"></i></div>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
 
-    <button id="botaoConverter">Converter</button>
-    <p id="total"></p>
+            </div> <!-------- MENU MOBILE ------->
+            <div class="overlay--menu" id="overlay--menu"></div>
 
-    <a href="extrato.html">Ver Extrato</a>
-</div>
+
+        </div> <!----Interface ----->
+
+    </header>
+
+    <div id="converter">
+        <h2>Conversor de Moedas</h2>
+
+        <label for="valor">Digite o valor em reais:</label>
+        <input type="number" id="valor" placeholder="Digite o valor" min="0" step="0.01">
+
+        <label for="moeda">Escolha a moeda:</label>
+        <select class="selectpicker" id="moeda" name="iconesel" data-style="btn-primary" style="width: 100%;">
+
+            <!--COLOCAR OS NOMES DAS MOEDAS-->
+            <option value="">Selecione</option>
+            <option
+                data-content="<img src='https://flagcdn.com/w80/ae.png' class='img-thumbnail' width='40' height='40'> Dirhan dos Emirados"
+                value="AED-BRL">Dirham dos Emirados</option>
+            <option
+                data-content="<img src='https://flagcdn.com/w80/us.png' class='img-thumbnail' width='40' height='60'> Dólar Americano"
+                value="USD-BRL">Dólar Americano</option>
+            <option
+                data-content="<img src='https://flagcdn.com/w80/au.png' class='img-thumbnail' width='40' height='60'> Dólar Australiano"
+                value="AUD-BRL">Dólar Australiano</option>
+            <option
+                data-content="<img src='https://flagcdn.com/w80/eu.png' class='img-thumbnail' width='40' height='60'> Euro"
+                value="EUR-BRL">Euro</option>
+            <option
+                data-content="<img src='https://flagcdn.com/w80/gb.png' class='img-thumbnail' width='40' height='60'> Libra Esterlina"
+                value="GBP-BRL">Libra Esterlina</option>
+            <option
+                data-content="<img src='https://flagcdn.com/w80/jp.png' class='img-thumbnail' width='40' height='60'> Yene Japonês"
+                value="JPY-BRL">Yene Japonês</option>
+            <option
+                data-content="<img src='https://flagcdn.com/w80/za.png' class='img-thumbnail' width='40' height='60'> Rand Sul-Africano"
+                value="ZAR-BRL">Rand Sul-Africano</option>
+            <option
+                data-content="<img src='https://flagcdn.com/w80/in.png' class='img-thumbnail' width='40' height='60'> Rupia Indiana"
+                value="JPY-BRL">Rupia Indiana</option>
+
+
+        </select>
+
+        <p id="cotacao"></p>
+
+        <p id="resultado"></p>
+
+        <button id="botaoConverter">Converter</button>
+        <p id="total"></p>
+
+        <a href="extrato.html">Ver Extrato</a>
+    </div>
+
+    <footer>
+
+        <div class="interface">
+            <div class="logo--footer">
+
+                <img src="../assets/img/coderwise.png" alt="logo coder wise">
+
+            </div> <!--------- Logo CoderFlix--------->
+
+            <div class="coders">
+
+                <div>
+                    <ul class="social">
+                        <li><span><strong>Anna</strong> Nascimento</span></li>
+                        <li>Front-end Developer</li>
+                        <li>
+                            <a href="https://github.com/Anna-csn" target="_blank">
+                                <i class="bi bi-github"></i>
+                            </a>
+
+                            <a href="https://www.linkedin.com/in/annaclaranascimento-ti/" target="_blank">
+                                <i class="bi bi-linkedin"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div> <!----------  Informação dos codres Coders------------>
+        </div><!---------Interface-------------->
+        <div class="line--footer">
+            <div>
+                <strong><span>CODER</span>WISE</strong>
+                <i class="bi bi-cc-circle"></i>
+                <span>2024 - 2024</span>
+            </div>
+
+            <div>
+                <span class="text--small">Website created by Anna Nascimento</span>
+                <i class="bi bi-cc-circle"></i>
+                <span>2024 Copyright</span>
+            </div>
+
+        </div> <!--------- última linha do footer  ---------->
+
+
+    </footer>
+
+
+    <!-- Scripts do footer -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="./assets/js/extrato.js" defer></script>
 
 </body>
+
 </html>
