--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <nav>
                 <ul class="menu-item">
                     <li><a class="menu-link" href="login.html">Entrar</a></li>
-                    <li><a class="menu-btn" href="">Criar conta</a></li>
+                    <li><a class="menu-btn" href="cadastro.html">Criar conta</a></li>
                 </ul>
             </nav>
             <div class="btn-sandwich">
@@ -47,8 +47,8 @@
                 <ul>
                     <li><a class="menu-btn"  href="#">Pessoal</a></li>
                     <li><a class="" href="#">Empresa</a></li>
-                    <li><a class="login-button" href="">Entrar</a></li>
-                    <li><a class="menu-btn" href="">Criar conta</a></li>
+                    <li><a class="login-button" href="login.html">Entrar</a></li>
+                    <li><a class="menu-btn" href="cadastro.html">Criar conta</a></li>
                 </ul>
             </nav>
 
@@ -72,7 +72,7 @@
       </section> <!------------Finl hero conteúdo------------>
       <section class="img-hero"><!------------Sessão Hero Imagem------------->
         <div class="img-banner">
-            <img src="./assets/img/imgHero.png" alt="">
+            <img src="./assets/img/imgHero.png" alt="homem utilizando o aplicativo">
         </div>
       </section><!---------------Final hero imagem---------------->
 </main>
