--- a/login.html
+++ b/login.html
@@ -7,11 +7,12 @@
     <link href="https://fonts.cdnfonts.com/css/wise" rel="stylesheet">
     <link rel="favicon icon" href="./assets/img/wiseFavion.ico">
     <title>Login</title>
-    <!--<link rel="stylesheet" href="./assets/css/login.css"> -->
-    <link rel="stylesheet" href="login.css"> 
+    <link rel="stylesheet" href="./assets/css/login.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    
    
 </head>
-<body>
+<body>     
 
     <div class="loading-screen" id="loadingScreen">
         <div class="loader"></div>
@@ -35,7 +36,7 @@
     <p id="mensagemLogin"></p>
 </div>
 
-    <script src="login.js"></script>
+    <script src="./assets/js/login.js"></script>
     
 </body>
 </html>
