--- a/cadastro.html
+++ b/cadastro.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://fonts.cdnfonts.com/css/wise" rel="stylesheet">
-    <!--<link rel="favicon icon" href="./assets/img/wiseFavion.ico">-->
-    <!--<link rel="stylesheet" href="./assets/css/cadastro.css"> -->
-    <link rel="stylesheet" href="cadastro.css"> 
+    <link rel="favicon icon" href="./assets/img/wiseFavion.ico">
+    <link rel="stylesheet" href="./assets/css/cadastro.css"> 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Cadastre-se</title>
 </head>
 <body>
+
+    <div class="loading-screen" id="loadingScreen">
+        <div class="loader"></div>
+    </div>
     <div class="page">
 
     <form method="post" class="formRegistration" id="registerForm">
@@ -36,6 +41,6 @@
     </form>
 </div>
 
-    <script src="cadastro1.js"></script>
+    <script src="./assets/js/cadastro1.js"></script>
 </body>
 </html>
