--- a/assets/css/teste.html
+++ b/assets/css/teste.html
@@ -7,6 +7,7 @@
     <title>Extrato</title>
     
     <!-- CSS Imports -->
+    <link rel="stylesheet" href="./tste.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -21,7 +22,7 @@
     <link rel="favicon icon" href="./assets/img/wiseFavion.ico">
 
     <!-- JavaScript Imports -->
-    <script src="./assets/js/extrato.js"></script>
+    <script src="../js/extrato.js"></script>
 </head>
 
 <body>
@@ -30,15 +31,15 @@
             <div class="menu-left">
                 <!-- Barra de Navegação -->
                 <div class="logo">
-                    <img src="./assets/img/logoWise.png" alt="Logo da CoderWise">
+                    <img src="../img/logoWise.png" alt="Logo da CoderWise">
                     <i>CODERWISE</i>
                 </div>
 
                 <nav class="menu-underline">
-                    <a href="./index.html"><i class="fa-solid fa-house"></i> Home</a>
-                    <a href="./conversoes.html"><i class="bi bi-coin"></i>Conversão</a>
-                    <a href="./extrato.html"><i class="bi bi-receipt"></i>Extrato</a>
-                    <a href="./transferencia.html"><i class="bi bi-send"></i> Transferência</a>
+                    <a href=""><i class="icon-home"></i> Home</a>
+                    <a href="#"><i class="icon-user-1"></i>Conversão</a>
+                    <a href="#"><i class="icon-file-o"></i>Extrato</a>
+                    <a href="#"><i class="icon-envelope-o"></i> Transferência</a>
                     <div class="underline"></div>
                 </nav>
             </div>
